// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Interpreter Should work with hello world 1`] = `
Array [
  "hello world",
]
`;

exports[`Interpreter should-work-with-arrays 1`] = `Array []`;

exports[`Interpreter should-work-with-binary-shorthand 1`] = `Array []`;

exports[`Interpreter should-work-with-break-and-continue 1`] = `
Array [
  "while start",
  "3",
  "while end",
  "while start",
  "2",
  "while start",
  "1",
  "after",
  "1",
]
`;

exports[`Interpreter should-work-with-function 1`] = `Array []`;

exports[`Interpreter should-work-with-function-call 1`] = `Array []`;

exports[`Interpreter should-work-with-function-expression 1`] = `
Array [
  "",
  "3",
]
`;

exports[`Interpreter should-work-with-get-shorthand 1`] = `Array []`;

exports[`Interpreter should-work-with-global-variable 1`] = `Array []`;

exports[`Interpreter should-work-with-if-expression 1`] = `
Array [
  "A",
]
`;

exports[`Interpreter should-work-with-if-expression-with-if-only 1`] = `
Array [
  "A",
]
`;

exports[`Interpreter should-work-with-integer 1`] = `Array []`;

exports[`Interpreter should-work-with-local-variable 1`] = `Array []`;

exports[`Interpreter should-work-with-method-call 1`] = `Array []`;

exports[`Interpreter should-work-with-nested-function 1`] = `
Array [
  "",
  "5",
]
`;

exports[`Interpreter should-work-with-null 1`] = `Array []`;

exports[`Interpreter should-work-with-object-without-extends 1`] = `Array []`;

exports[`Interpreter should-work-with-objects 1`] = `Array []`;

exports[`Interpreter should-work-with-objects-and-slots 1`] = `Array []`;

exports[`Interpreter should-work-with-printf 1`] = `
Array [
  " My age is ~.\\\\ n ",
  "8",
]
`;

exports[`Interpreter should-work-with-set-shorthand 1`] = `Array []`;

exports[`Interpreter should-work-with-slot-assignment 1`] = `Array []`;

exports[`Interpreter should-work-with-slot-lookup 1`] = `Array []`;

exports[`Interpreter should-work-with-type-arrays 1`] = `Array []`;

exports[`Interpreter should-work-with-type-function-expression 1`] = `Array []`;

exports[`Interpreter should-work-with-type-function-parameter 1`] = `Array []`;

exports[`Interpreter should-work-with-type-function-statement 1`] = `Array []`;

exports[`Interpreter should-work-with-type-integer 1`] = `Array []`;

exports[`Interpreter should-work-with-type-method-signature 1`] = `Array []`;

exports[`Interpreter should-work-with-type-null 1`] = `Array []`;

exports[`Interpreter should-work-with-type-typedef 1`] = `Array []`;

exports[`Interpreter should-work-with-variable-assignment 1`] = `Array []`;

exports[`Interpreter should-work-with-variable-reference 1`] = `Array []`;

exports[`Interpreter should-work-with-while-expression 1`] = `Array []`;
